# meadow-simulation

./: .gitignore  CMakeLists.txt  Grass.cpp  Grass.h  Meadow.cpp  Meadow.h  Pond.cpp  Pond.h  README.md  Sun.cpp  Sun.h  Synchronization.cpp  Synchronization.h  Utils.cpp  Utils.h  main.cpp
Animals/: Animal.cpp  Animal.h  Cow.cpp  Cow.h  Rabbit.cpp  Rabbit.h  Wolf.cpp  Wolf.h
Resources/: Grass.cpp  Grass.h  Pond.cpp  Pond.h  Rabbit_Hole.cpp  Rabbit_Hole.h
Utils/: Graphics.cpp  Graphics.h  Synchronization.cpp  Synchronization.h  Utils.cpp  Utils.h
